objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Analytics_ID__c</fullName>
        <externalId>true</externalId>
        <label>Analytics ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Contact_ID__c</fullName>
        <formula>Migration_Source_ID__r.Base_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_First_Name__c</fullName>
        <label>Base First Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Last_Name__c</fullName>
        <label>Base Last Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Title__c</fullName>
        <description>Original title, if from base</description>
        <label>Base Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <label>Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Last_Delighted_Response_Score__c</fullName>
        <label>Last Delighted Response Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Back_Content_ID__c</fullName>
        <label>Drivers License Back Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Back_URL__c</fullName>
        <formula>if (ISBLANK(Drivers_License_Back_Content_ID__c),&quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot; &amp; Drivers_License_Back_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drivers License Back URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Front_Content_ID__c</fullName>
        <label>Drivers License Front Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Front_URL__c</fullName>
        <formula>IF(ISBLANK(Drivers_License_Front_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Drivers_License_Front_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drivers License Front URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>MID(Email, FIND(&apos;@&apos;, Email, 1)+1, (LEN(Email) - FIND(&apos;@&apos;, Email, 1)+1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This contact&apos;s incentive. Contacts with the same e-mail address will share incentives.</description>
        <label>Incentive</label>
        <referenceTo>Incentive__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Token__c</fullName>
        <formula>Incentive_ID__r.Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incentive Token</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Blacklisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Blacklisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merged_Analytics_IDs__c</fullName>
        <description>When contacts are merged together during an account merge, any extra analytics IDs are stored in this field.</description>
        <label>Merged Analytics IDs</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Normalized_AssistantPhone__c</fullName>
        <description>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</description>
        <inlineHelpText>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</inlineHelpText>
        <label>Normalized AssistantPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Normalized_HomePhone__c</fullName>
        <description>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</description>
        <inlineHelpText>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</inlineHelpText>
        <label>Normalized HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Normalized_MobilePhone__c</fullName>
        <description>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</description>
        <inlineHelpText>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</inlineHelpText>
        <label>Normalized MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Normalized_OtherPhone__c</fullName>
        <description>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</description>
        <inlineHelpText>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</inlineHelpText>
        <label>Normalized OtherPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Normalized_Phone__c</fullName>
        <description>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</description>
        <inlineHelpText>Normalized phone number field containing phone number formatted using https://help.salesforce.com/apex/                HTViewSolution?id=000181563&amp;language=en_US</inlineHelpText>
        <label>Normalized Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preserve_After_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this object should not be wiped as part of the migration.</description>
        <label>Preserve After Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Of_Insurance_Content_ID__c</fullName>
        <label>Proof Of Insurance Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_Of_Insurance_URL__c</fullName>
        <formula>IF(ISBLANK(Proof_Of_Insurance_Content_ID__c), &quot;&quot;, &quot;https://shiftcars1.appspot.com/admin/blob_content/&quot;&amp;Proof_Of_Insurance_Content_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proof Of Insurance URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Last4__c</fullName>
        <description>Last 4 digits of this Contact&apos;s SSN</description>
        <label>SSN Last4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tesla_Location__c</fullName>
        <label>Tesla Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Domains</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Email_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <label>Domains</label>
    </listViews>
    <listViews>
        <fullName>Shift_Company</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Shift Company</value>
        </filters>
        <label>Shift Company</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>phone_has_10_digits</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
ISBLANK(Phone) , false , NOT( REGEX( Phone,&quot;(\\D?[0-9]{3}\\D?)[\\s][0-9]{3}-[0-9]{4}&quot;))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone number must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prevent_value_in_salutation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL (Salutation, &quot;-&quot;)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Value should not be selected</errorMessage>
    </validationRules>
</CustomObject>